# roscpp-talk-sub

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/publisher/: .catkin  .rosinstall  setup.sh
devel/.private/publisher/lib/pkgconfig/: publisher.pc
devel/.private/publisher/lib/publisher/: publisher_node
devel/.private/publisher/share/publisher/cmake/: publisherConfig.cmake
devel/.private/subscriber/: .catkin  .rosinstall  local_setup.sh
devel/.private/subscriber/lib/pkgconfig/: subscriber.pc
devel/.private/subscriber/lib/subscriber/: subscriber_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  publisher.pc  subscriber.pc
devel/lib/publisher/: publisher_node
devel/lib/subscriber/: subscriber_node
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/publisher/cmake/: publisherConfig-version.cmake  publisherConfig.cmake
devel/share/subscriber/cmake/: subscriberConfig-version.cmake  subscriberConfig.cmake
launch/: esempio.launch
logs/publisher/: build.make.000.log.stderr
src/publisher/: CMakeLists.txt  main.cpp
src/subscriber/: CMakeLists.txt  main.cpp
(+1 files in other folders)
